<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/img_poster_movie"
        android:layout_width="190dp"
        android:layout_height="270dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/movie_poster"
        android:elevation="25dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_title_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_poster_movie"
        app:layout_constraintTop_toTopOf="@+id/img_poster_movie"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/txt_genre_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/genre"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_title_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_title_movie" />

    <TextView
        android:id="@+id/text_genre_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_genre_movie"
        app:layout_constraintTop_toBottomOf="@+id/txt_genre_movie"
        tools:text="@string/genre" />

    <TextView
        android:id="@+id/txt_duration_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/duration"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_genre_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_genre_movie" />

    <TextView
        android:id="@+id/text_duration_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_duration_movie"
        app:layout_constraintTop_toBottomOf="@+id/txt_duration_movie"
        tools:text="@string/duration" />

    <TextView
        android:id="@+id/txt_score_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_duration_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_duration_movie" />

    <RatingBar
        android:id="@+id/rating_movie"
        style="@android:style/Widget.Material.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.1"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toStartOf="@+id/txt_score_movie"
        app:layout_constraintTop_toBottomOf="@+id/txt_score_movie" />

    <TextView
        android:id="@+id/rating_value_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/duskYellow"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/rating_movie"
        app:layout_constraintTop_toTopOf="@+id/rating_movie"
        tools:text="@string/score" />

    <TextView
        android:id="@+id/txt_status_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/rating_movie"
        app:layout_constraintTop_toBottomOf="@+id/rating_movie" />

    <TextView
        android:id="@+id/text_status_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_status_movie"
        app:layout_constraintTop_toBottomOf="@+id/txt_status_movie"
        tools:text="@string/status" />

    <TextView
        android:id="@+id/txt_release_date_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/release_date"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/text_status_movie"
        app:layout_constraintTop_toBottomOf="@+id/text_status_movie" />

    <TextView
        android:id="@+id/text_release_date_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_release_date_movie"
        app:layout_constraintTop_toBottomOf="@+id/txt_release_date_movie"
        tools:text="@string/release_date" />

    <TextView
        android:id="@+id/txt_overview_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/overview"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_poster_movie" />

    <TextView
        android:id="@+id/text_overview_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_overview_movie"
        app:layout_constraintTop_toBottomOf="@+id/txt_overview_movie"
        tools:text="@string/overview" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>