<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_detail_movie">Movie Detail</string>
    <string name="title_activity_detail_tv_show">TV Show Detail</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="score">User Score</string>
    <string name="status">Status</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="type">Type</string>
    <string name="network">Network</string>

    <string name="splash">Splash Screen</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="tv_show_poster">Tv Show Poster</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="empty_movie">No favorite Movie yet.</string>
    <string name="empty_tv_show">No favorite Tv Show yet.</string>
    <string name="menu_favorite">Favorite</string>

    <string name="menu_newest">Newest</string>
    <string name="menu_oldest">Oldest</string>
    <string name="menu_random">Random</string>
</resources>